# Foxs-Magic-Templates

./: README.md  keygen.py
FastAPI/: .gitignore  app.py  pyproject.toml
FastAPI with Auth/: Dockerfile  app.py  notes.txt  pyproject.toml
FastAPI with Auth/api/: database.py
FastAPI with Seperate-Auth/: .gitignore  app.py
FastAPI with Seperate-Auth/api/: db_notes.txt  models.py
FastAPI with Seperate-Auth/templates/: index.html
FastAPI/api/: models.py
FastAPI/static/css/: index.css
React FastAPI with Auth Mantine/client/: package-lock.json  package.json
React FastAPI with Auth Mantine/client/src/: AuthProvider.tsx  NavbarContext.tsx  Router.tsx  main.tsx
React FastAPI with Auth Mantine/client/src/components/ActionToggle/: ActionToggle.tsx
React FastAPI with Auth Mantine/client/src/components/NavbarMinimal/: NavbarMinimal.module.css  NavbarMinimal.tsx
React FastAPI with Auth Mantine/server/: app.py  pyproject.toml
React FastAPI with Auth Mantine/server/api/: database.py
React FastAPI with Seperate-Auth Mantine/client/src/components/AuthenticationImage/: AuthenticationImage.module.css  AuthenticationImage.tsx
React FastAPI with Seperate-Auth Mantine/client/src/pages/: Home.page.tsx  Landing.page.tsx  Login.page.tsx
React FastAPI with Seperate-Auth Mantine/client/src/routes/: ProtectedRoute.tsx
React FastAPI with Seperate-Auth Mantine/server/: app.py
React FastAPI with Seperate-Auth Mantine/server/api/: auth_database.py  database.py
